--- a/assets/css/login_instrutor.css
+++ b/assets/css/login_instrutor.css
@@ -64,7 +64,7 @@ button:hover {
     top: 10px;
     left: 10px;
     font-size: 24px;
-    color: #333333;
+    color: #333333; /* Cor da seta */
     text-decoration: none;
     background-color: transparent;
     border: none;
@@ -73,5 +73,14 @@ button:hover {
 }
 
 .back-arrow:hover {
-    color: #afca85;
+    color: #afca85; /* Cor da seta ao passar o mouse */
+}
+
+
+/* Posiciona a mensagem de erro acima do botão */
+.error-message {
+    color: #ff4d4d; /* Cor vermelha para erro */
+    font-size: 14px;
+    margin-bottom: 10px;
+    text-align: center;
 }
