--- a/assets/css/relatorios.css
+++ b/assets/css/relatorios.css
@@ -57,3 +57,29 @@ button {
 button:hover {
     background-color: #45a049;
 }
+
+a {
+    display: block;
+    text-align: center;
+    margin-top: 20px;
+    color: #333;
+    text-decoration: none;
+    font-size: 16px;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+.back-button {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 24px;
+    color: #333;
+    text-decoration: none;
+}
+
+.back-button:hover {
+    color: #4CAF50;
+}
